提交编译过程中报错的问题，并已经修改了一部分

--- a/fs/Makefile
+++ b/fs/Makefile
@@ -1,9 +1,9 @@
 AR	=gar
-AS	=gas
+AS	=as
 CC	=gcc
 LD	=gld
-CFLAGS	=-Wall -O -fstrength-reduce -fcombine-regs -fomit-frame-pointer \
-	-mstring-insns -nostdinc -I../include
+CFLAGS	=-Wall -O -fstrength-reduce  -fomit-frame-pointer \
+	-nostdinc -I../include
 CPP	=gcc -E -nostdinc -I../include
 
 .c.s:
